@@ -5,11 +5,9 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Scanner;
-import java.util.stream.Collectors;
 
-public class MealAdder extends MealAction {
-    public MealAdder(Map<String, List<String>> breakfast, Map<String, List<String>> lunch, Map<String, List<String>> dinner) {
-        super(breakfast, lunch, dinner);
+public class MealAdder {
+    public MealAdder() {
     }
 
     public void chooseMealType(Scanner sc, Statement statement) throws SQLException {
@@ -18,9 +16,7 @@ public class MealAdder extends MealAction {
             System.out.println("Which meal do you want to add (breakfast, lunch, dinner)?");
             String category = sc.nextLine().toLowerCase();
             switch (category) {
-                case "breakfast" -> addMeal(sc, getBreakfast(), statement, category);
-                case "lunch" -> addMeal(sc, getLunch(), statement, category);
-                case "dinner" -> addMeal(sc, getDinner(), statement, category);
+                case "breakfast", "dinner", "lunch" -> addMeal(sc, statement, category);
                 case "exit" -> toContinue = false;
                 default -> {
                     System.out.println("Wrong meal category! Choose from: breakfast, lunch, dinner.");
@@ -31,7 +27,7 @@ public class MealAdder extends MealAction {
         }
     }
 
-    public void addMeal(Scanner sc, Map<String, List<String>> mealType, Statement statement, String category) throws SQLException {
+    public void addMeal(Scanner sc, Statement statement, String category) throws SQLException {
         /* NAME */
         String name = null;
         String updateQuery = null;
@@ -45,7 +41,10 @@ public class MealAdder extends MealAction {
                 isNameValid = true;
             }
         }
-        updateQuery = String.format("insert into meals (meal, category) values ('%s', '%s')", name, category);
+        //
+        int mealId = lastIndex("meals", "meal_id", statement) + 1;
+        updateQuery = String.format("insert into meals (meal_id, meal, category) values (%d, '%s', '%s')"
+                , mealId, name, category);
         statement.executeUpdate(updateQuery);
         /* INGREDIENTS */
         boolean areIngredientsAdded = false;
@@ -54,18 +53,37 @@ public class MealAdder extends MealAction {
             List<String> ingredients = Arrays.stream(sc.nextLine()
                             .split(","))
                     .map(String::trim)
-                    .collect(Collectors.toList());
+                    .toList();
             if (ingredients.stream().map(e -> e.replaceAll(" ", "")).anyMatch(this::isEntryValid)) {
                 System.out.println("Wrong format. Use letters only!");
             } else {
-                mealType.put(name, ingredients);
+                int ingredientId = lastIndex("ingredients", "ingredient_id", statement);
+                for (String ingredient : ingredients) {
+                    ingredientId += 1;
+                    updateQuery = String.format("insert into ingredients (ingredient_id,ingredient," +
+                            "meal_id) " +
+                            "values " +
+                            "(%d, '%s', %d)", ingredientId, ingredient, mealId);
+                    statement.executeUpdate(updateQuery);
+                }
+                //mealType.put(name, ingredients);
                 System.out.println("The meal has been added!");
                 areIngredientsAdded = true;
             }
         }
     }
 
-    public boolean isEntryValid(String entry) {
+    private boolean isEntryValid(String entry) {
         return entry.isEmpty() || Arrays.stream(entry.split("")).anyMatch(ch -> !Character.isLetter(ch.charAt(0)));
+    }
+
+    private int lastIndex (String tableName, String columnName, Statement statement) throws SQLException {
+        String query = String.format("select %s from %s order by %s desc limit 1;", columnName, tableName, columnName);
+        ResultSet rs = statement.executeQuery(query);
+        if (rs.next()) {
+            return rs.getInt(columnName);
+        } else {
+            return 0;
+        }
     }
 }
